# swiftdeploy

./: Dockerfile  README.md  docker-compose.yaml  manifest.yaml  nginx.conf
app/: go.mod  go.sum  main.go
policies/: canary.rego  data.json  infra.rego
swiftdeploy/: main.py  manifest.py  metrics.py  opa.py  output.py  pyproject.toml
swiftdeploy/commands/: audit.py  deploy.py  init.py  promote.py  status.py  teardown.py  validate.py
templates/: docker-compose.yaml.j2  nginx.conf.j2
