[project]
name = "swiftdeploy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jinja2>=3.1.6",
    "pyyaml>=6.0.3",
    "setuptools>=82.0.1",
]
[project.scripts]
swiftdeploy = "swiftdeploy.main:main"

[tool.setuptools]
packages = ["swiftdeploy", "swiftdeploy.commands"]

[tool.setuptools.package-dir]
swiftdeploy = "."
"swiftdeploy.commands" = "commands"